--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -917,6 +917,22 @@ fengtian.new.116.t:0 "Seditious Articles Proliferate"
 fengtian.new.116.d:0 "An article in the Nihon Kogyō Shimbun, or 'Japan Industrial Newspaper', has been translated into Chinese and spread widely in local newspapers before censorship officials managed to track and shut down the publisher. The article described in substantial detail the extensive degree to which Mantetsu and other Japanese companies have established control over most sectors of our economy, and set a forecast predicting near complete control within five years time. For obvious reasons, the article has been deeply upsetting to the general population, and there is little we can do to prevent the existing copies circulating."
 fengtian.new.116.a:0 "Disgraceful!"
 
+fengtian.new.117.t:0 "Honghuzi Attacks in Heilongjiang"
+fengtian.new.117.d:0 "Honghuzi, translating literally to 'Red Beards', are groups of bandits and robbers that have long plagued the Northeast. While the Grand Marshal's Pacification and Centralization campaign after the Civil Wars reduced their numner, there have been attacks in the years since, and now several farmsteads in southern Heilongjiang were set alight, and their occupants robbed of all valuables."
+fengtian.new.117.a:0 "Unfortunate"
+
+fengtian.new.118.t:0 "Honghuzi Attacks in Xing'an"
+fengtian.new.118.d:0 "The Honghuzi have struck again, this time in Xing'an, raiding farmers and traders along its major roads. The local governor has dispatched his garrison to guard against future incursions, but the rough terrain and the bandit's elusive nature suggests that they will simply strike again elsewhere."
+fengtian.new.118.a:0 "Damn bandits!"
+
+fengtian.new.119.t:0 "Honghuzi Attacks in Liaobei"
+fengtian.new.119.d:0 "The Honghuzi have grown particularly bold, leading attacks into Liaobei province, and even venturing to the borders of Jilin before derailing a local train and robbing its occupants, including a number of Japanese citizens. The local authorities have apologized profusely for this embarassment, and additional guards have been posted on nearby trains, but the Japanese Consulate has already demanded compensation from our government for the property lost."
+fengtian.new.119.a:0 "Damn"
+
+fengtian.new.120.t:0 "The Manchurian Youth League"
+fengtian.new.120.d:0 "The Manchurian Youth League has existed as a general association for Mantetsu employees and other Japanese residents in the Northeast for several years, but the recent attacks by bandits has lead it to issue a statement on the matter, calling on the Japanese Government to better protect its citizens, and demanding a greater degree of control over our government. \n\n Of course, the immediate impact will likely be minimal, but if the Youth League continues its efforts, it could turn some heads in Tokyo."
+fengtian.new.120.a:0 "Unfortunate"
+
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
 fengtian.informalempire.1.d:0 "The time has come to declare our independence, drive the Japanese intruders from China, and end a century of unbearable national humiliation! We will naturally be deprived of foreign material support, but the Chinese people now rally behind us. Onward! Zhonghua Mingguo Wansui!"
