--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -57,10 +57,10 @@ OTT_opda_focus_tt:0 "§RWe need to end the OPDA if we are to gain full control o
 OTT_creditors_tt:0 "§ROur creditors need to agree§!\n"
 OTT_turkestan_tt:0 "§RTurkestan views us as a potential rival, and might reject our diplomatic advances.§!\n"
 OTT_NOT_IMPLEMENTED_YET:0 "§Y---THIS PATH IS NOT IMPLEMENTED YET---§!\n"
-OTT_gendarmerie_tt:0 "§GReformed Gendarmerie Corps will help us quell rebellions before they even begin.§!\n"
+OTT_gendarmerie_tt:0 "§GReformed Gendarmerie Corps§! will help us quell rebellions before they even begin.\n"
 camel_corpse:0 "Imperial Camel Corps"
 OTT_camel_corpse_effect:0 "Enables §HImperial Camel Corps§!\n§HCavalry\n    Desert§!\n      Attack: §G+15%§!\n      Defense: §G+5%§!\n      Movement: §G+3%§!\n\n"
-OTT_desert_tt:0 "§GOttoman Desert Corps will help us control desert areas better.§!\n§ROttoman Desert Rangers§! §Gnow patrol the wastes§!\n"
+OTT_desert_tt:0 "§GOttoman Desert Corps§! will help us control desert areas better.\n§ROttoman Desert Rangers§! now patrol the wastes\n"
 OTT_german_approval_tt:0 "§RThe German Empire needs to agree§!\n"
 ott_opda_flag_tt:0 " §RWe need to get rid of the OPDA before we can make investments§!\n"
 ott_opda_end_tt:0 "§GEconomy, Air Force and Navy focuses are now unlocked!§!\n"
