Some changes and additions to the foreign russian tree

--- a/localisation/KR_Annexations_l_english.yml
+++ b/localisation/KR_Annexations_l_english.yml
@@ -17,6 +17,7 @@ annex.5.t:0 "Integration of Bulgaria"
 annex.5.d:0 "We've controlled Bulgaria for some time now, and it seems like the local population have finally accepted our rule."
 annex.6.t:0 "The Annexation of Romania"
 annex.6.d:0 "The Iron Guard regime has been extinguished and their crimes against humanity are finally stopped. We no longer have to worry about them."
+annex.6.b:0 "Seize Bessarabia and liberate Romania"
 annex.7.t:0 "Integration of Romania"
 annex.7.d:0 "We've controlled Romania for some time now, and it seems like the local population have finally accepted our rule."
 annex.8.t:0 "The Annexation of Serbia"
