--- a/localisation/KR_Russia_Foreign_l_english.yml
+++ b/localisation/KR_Russia_Foreign_l_english.yml
@@ -30,6 +30,9 @@ RUS_central_asia_focus:0 "Central Asian Direction"
 RUS_central_asia_focus_desc:0 "Unlike the Caucasus region, there is no German interest in the central Asian provinces. We should be able to grab them without much opposition from the great powers."
 RUS_secure_kazakhstan:0 "Secure Kazakhstan"
 RUS_secure_kazakhstan_desc:0 "Kazakhstan is vast and wealthy. Once brought into the fold we can look even further south, to Turkestan and even Iran!"
+ALO_stayed_russia:0 "The Alash Autonomy remained loyal"
+RUS_integrate_kazakhstan:0 "Integrate the Alash Autonomy"
+RUS_integrate_kazakhstan_desc:0 "Kazakhstan is vast and wealthy and more than that they are loyal. Once brought into the fold again we can look even further south, to Turkestan and even Iran!"
 RUS_secure_turkestan:0 "Secure Turkestan"
 RUS_secure_turkestan_desc:0 "Turkestan is not particularly wealthy or even populous. But soon enough, it will be ours, and it will serve excellently as a bridgehead to the wealthy Iranian and Indian provinces, should we need it."
 
@@ -1388,6 +1391,15 @@ rusfor.1122.c:0 "Stable relationship with Russia is more important."
 rusfor.1123.t:0 "Poland joins Mitteleuropa"
 rusfor.1123.d:0 "Germans accepted our offer and invited us into Mitteleuropa alliance. Now our independence and territorial integrity are protected by powerful German armed forces."
 rusfor.1123.a:0 "Now our independence is secured!"
+
+rusfor.11211.t:0 "Russian expansionism threatens Commonwealth"
+rusfor.11211.d:0 "Recent reassurgence of the Russian state in the east together with recent russian diplomatic activity through the eastern Europe proves, that in order to keep our state, its independence and its borders intact, we need to gain protection of German Empire and Mitteleuropa alliance. Hovewer doing will mean definite military involvement of our state in any potential conflict in the western europe and may further worsen our relations with Russia. What shall we do ?"
+
+rusfor.11221.t:0 "Commonwealth wants to join Mitteleuropa"
+rusfor.11221.d:0 "Government of Commonwealth, afraid of recent agressive russian foreign policy has annouced recently that they want to join Mitteleuropa alliance. It's not a sudden move because pro-German policy is popular in many circles including the ruling cabinet and army. Do we want to allow Commonwealth to join our alliance and protect them from potential Russian diplomatic and economical offensive ?"
+
+rusfor.11231.t:0 "Commonwealth joins Mitteleuropa"
+rusfor.11231.d:0 "Germans accepted our offer and invited us into Mitteleuropa alliance. Now our independence and territorial integrity are protected by powerfull German armed forces."
 
 rusfor.1124.t:0 "The Second Weltkrieg"
 rusfor.1124.d:0 "Growing tensions between the German Empire and the Commune of France has erupted into full scale war. A conflict of such a grand scale presents us with the option to reclaim our lost influence and establish Russian dominance over Eastern Europe. What shall we do?"
