--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -2077,20 +2077,20 @@ FLN_national_populist:0 "Flanders"
 FLN_national_populist_ADJ:0 "Flemish"
 FLN_national_populist_DEF:0 "Flanders"
 
-FNG_totalist:0 "Commune of Fengtian"
+FNG_totalist:0 "Fengtian Commune"
 FNG_totalist_ADJ:0 "Fengtian"
-FNG_totalist_DEF:0 "The Commune of Fengtian"
-FNG_syndicalist:0 "Commune of Fengtian"
+FNG_totalist_DEF:0 "The Fengtian Commune"
+FNG_syndicalist:0 "Fengtian Commune"
 FNG_syndicalist_ADJ:0 "Fengtian"
-FNG_syndicalist_DEF:0 "The Commune of Fengtian"
-FNG_radical_socialist:0 "Commune of Fengtian"
+FNG_syndicalist_DEF:0 "The Fengtian Commune"
+FNG_radical_socialist:0 "Fengtian Commune"
 FNG_radical_socialist_ADJ:0 "Fengtian"
-FNG_radical_socialist_DEF:0 "The Commune of Fengtian"
+FNG_radical_socialist_DEF:0 "The Fengtian Commune"
 FNG_social_democrat:0 "Fengtian"
 FNG_social_democrat_ADJ:0 "Fengtian"
 FNG_social_democrat_DEF:0 "Fengtian"
+FNG_social_liberal:0 "Fengtian"
 FNG_social_liberal_ADJ:0 "Fengtian"
-FNG_social_liberal_DEF:0 "Fengtian"
 FNG_social_liberal_DEF:0 "Fengtian"
 FNG_market_liberal:0 "Fengtian"
 FNG_market_liberal_ADJ:0 "Fengtian"
