--- a/localisation/KR_Russia_l_english.yml
+++ b/localisation/KR_Russia_l_english.yml
@@ -480,8 +480,8 @@ RUS_WRA_POL1:0 "Centralised Apparatus of Power"
 RUS_WRA_POL1_desc:0 "The state of affairs in the Russian state requires a full-scale reorganisation of public powers, the corrupt and independent administration that operated before shall now only obey to the Vozhd, and only to the Vozhd."
 RUS_WRA_POL2:0 "Yunarmiya"
 RUS_WRA_POL2_desc:0 "Because of the civil war in Russia, millions of Russian children became orphans. President Kerensky did almost nothing to improve their lives, but Boris Savinkov has other plans. The organisation 'Yunaya Armiya' ('Young Army') has begun to militarise the asylums and school of the children. The coming generations of the Russian people will get a chance to improve their lives and become builders of a new society."
-RUS_WRA_POL3:0 "Legacy of the Whites"
-RUS_WRA_POL3_desc:0 "The White generals defeated the Bolsheviks more than 15 years ago and brought peace and prosperity in the country. The White knights shall be honoured as the heroes of Russia."
+RUS_WRA_POL3:0 "State Cinema Industry"
+RUS_WRA_POL3_desc:0 "One of the most important things for the Vozhd is the thought of spreading his ideology throughout the state. One such way is to create a cheap cinema circuit, which every Russian citizen will be able to visit. A lot of Russian films are already made in the 'Mosfilm' studio and will be distributed to all cities and town. With the power of the cinema Savinkov is going to change the public mind and show Russia a new way."
 RUS_WRA_POL4:0 "A New Russia"
 RUS_WRA_POL4_desc:0 "Boris Savinkov announced his intention to build a new Russia, stronger than it was ever before and a force for the world to reckon. But a new country needs a new society : courage, health, and work shall be our words of principle and the authority of the Vozhd shall be respected everywhere for he is the only one that can lead our country through these difficult times."
 
@@ -489,8 +489,8 @@ RUS_stratocrat:0 "Statocratic Government"
 RUS_stratocrat_desc:0 "The chronic incapacity to rule of the Kerensky government proved itself dangerous for Russia, to secure our power proven officers have to take up important offices of the adminstration. Only that way we'll enjoy a competent public service."
 RUS_military_spirit:0 "Military Spirit"
 RUS_military_spirit_desc:0 "The post-war young generation is told to be "lost", lacking of any goal, any vision of future. The army is the only obstacle on the path leading to chaos and disintegration of Russia, they shall take up the education of our youth and soon the education of the whole country. A military spirit can only benefit the Motherland."
-RUS_purge_corruption:0 "Purge the Corruption"
-RUS_purge_corruption_desc:0 "Corruption is running rampant in our society, corrupt officials are found everywhere and, worse than that, words are that some bolsheviks infiltrated the state. We have to stop this misery."
+RUS_legacy_whites:0 "Legacy of the Whites"
+RUS_legacy_whites_desc:0 "The White generals defeated the Bolsheviks more than 15 years ago and brought peace and prosperity in the country. The White knights shall be honoured as the heroes of Russia."
 RUS_state_revanchism:0 "State Revanchism"
 RUS_state_revanchism_desc:0 "Now that Russia has stabilised and grown stronger under the rule of her army she must now grow, we must reclaim the land that has been stolen to us and liberate their peoples that are chanting for our return!"
 
