Who loves spelling fixes

--- a/localisation/KR_Russia_Foreign_l_english.yml
+++ b/localisation/KR_Russia_Foreign_l_english.yml
@@ -1339,7 +1339,7 @@ rusfor.1112.b:0 "Who do they think they are? Claim Manchuria too!"
 rusfor.1112.c:0 "Back down, for now..."
 
 rusfor.1113.t:0 "Russia demands Northern Mongolia"
-rusfor.1113.d:0 "von Ungern-Sternberg woke up this morning with the news that Russia is demanding Northern Mongolia for themselves. This demand made the baron to fly into a furry but now he calmed down and has to decide how to react. How shall answer this insult?"
+rusfor.1113.d:0 "Roman von Ungern-Sternberg woke up this morning with the news that Russia is demanding Northern Mongolia for themselves. This demand made the baron to fly into a furry but now he calmed down and has to decide how to react. How shall answer this insult?"
 rusfor.1113.a:0 "Bow down to the Russians..."
 rusfor.1113.b:0 "Attack Russia! We will loot Moscow one more time!"
 rusfor.1113.c:0 "Send a written letter to politely refuse their offer."
@@ -1393,13 +1393,13 @@ rusfor.1123.d:0 "Germans accepted our offer and invited us into Mitteleuropa all
 rusfor.1123.a:0 "Now our independence is secured!"
 
 rusfor.11211.t:0 "Russian expansionism threatens Commonwealth"
-rusfor.11211.d:0 "Recent reassurgence of the Russian state in the east together with recent russian diplomatic activity through the eastern Europe proves, that in order to keep our state, its independence and its borders intact, we need to gain protection of German Empire and Mitteleuropa alliance. Hovewer doing will mean definite military involvement of our state in any potential conflict in the western europe and may further worsen our relations with Russia. What shall we do ?"
+rusfor.11211.d:0 "Recent resurgence of the Russian state in the east together with recent Russian diplomatic activity through the eastern Europe proves, that in order to keep our state, its independence and its borders intact, we need to gain protection of German Empire and Mitteleuropa alliance. However doing will mean definite military involvement of our state in any potential conflict in the western Europe and may further worsen our relations with Russia. What shall we do ?"
 
 rusfor.11221.t:0 "Commonwealth wants to join Mitteleuropa"
-rusfor.11221.d:0 "Government of Commonwealth, afraid of recent agressive russian foreign policy has annouced recently that they want to join Mitteleuropa alliance. It's not a sudden move because pro-German policy is popular in many circles including the ruling cabinet and army. Do we want to allow Commonwealth to join our alliance and protect them from potential Russian diplomatic and economical offensive ?"
+rusfor.11221.d:0 "Government of Commonwealth, afraid of recent aggressive Russian foreign policy has announced recently that they want to join Mitteleuropa alliance. It's not a sudden move because pro-German policy is popular in many circles including the ruling cabinet and army. Do we want to allow Commonwealth to join our alliance and protect them from potential Russian diplomatic and economical offensive ?"
 
 rusfor.11231.t:0 "Commonwealth joins Mitteleuropa"
-rusfor.11231.d:0 "Germans accepted our offer and invited us into Mitteleuropa alliance. Now our independence and territorial integrity are protected by powerfull German armed forces."
+rusfor.11231.d:0 "Germans accepted our offer and invited us into Mitteleuropa alliance. Now our independence and territorial integrity are protected by powerful German armed forces."
 
 rusfor.1124.t:0 "The Second Weltkrieg"
 rusfor.1124.d:0 "Growing tensions between the German Empire and the Commune of France has erupted into full scale war. A conflict of such a grand scale presents us with the option to reclaim our lost influence and establish Russian dominance over Eastern Europe. What shall we do?"
