--- a/localisation/KR_Siberia_l_english.yml
+++ b/localisation/KR_Siberia_l_english.yml
@@ -7,8 +7,8 @@ SIB_syndicalist_party:0 "Mensheviks' Supporters"
 SIB_syndicalist_party_long:0 "Mensheviks' Supporters"
 SIB_radical_socialist_party:0 "Democrats"
 SIB_radical_socialist_party_long:0 "Bakunin's Democrats"
-SIB_social_democrat_party:0 "Progressivists"
-SIB_social_democrat_party_long:0 "Progressivists"
+SIB_social_democrat_party:0 "Progressive"
+SIB_social_democrat_party_long:0 "Progressive"
 SIB_social_liberal_party:0 "Federalists"
 SIB_social_liberal_party_long:0 "Federalists"
 SIB_market_liberal_party:0 "Federalists"
