--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -285,7 +285,7 @@ ukraine.48.d:0 "Romanian King published a note, where he insists that Bessarabia
 ukraine.48.a:0 "Then it is war"
 ukraine.48.b:0 "We don't need Bessarabia"
 ukraine.52.t:0 "An Heir to King Vasily?"
-ukraine.52.d:0 "Unfortunately, our King has no children and as such he has to choose his successor. Only two candidatures are considered by the government and ministers - the nephew of Vasily, Leo Stefan Habsburg and Daniil Skoropadsky, son of our Hetman. 'ViN' and 'OUN' support Daniil as they believe he will weaken Ukrainian dependence on Mitteleuropa. Leo has support only from Skoropadsky`s opponents and employers, who have connections with Germany and Austria. Whom will we choose?"
+ukraine.52.d:0 "Unfortunately, our King has no children and as such he has to choose his successor. Only two candidatures are considered by the government and ministers - the nephew of Vasily, Leo Stefan Habsburg and Daniil Skoropadsky, son of our Hetman. 'ViN' and 'OUN' support Daniil as they believe he will weaken Ukrainian dependence on Mitteleuropa. Leo has support only from Skoropadsky's opponents and employers, who have connections with Germany and Austria. Whom will we choose?"
 ukraine.52.a:0 "Leo Stefan Habsburg!"
 ukraine.52.b:0 "Daniil Skoropadsky!"
 ukraine.53.t:0 "A New Minister of Security?"
@@ -340,7 +340,7 @@ ukraine.71.d:0 "Ukraine has come to us offering a military alliance. While it'd 
 ukraine.71.a:0 "Accept the offer!"
 ukraine.71.b:0 "We do not need this"
 ukraine.72.t:0 "Russia accepted our proposal!"
-ukraine.72.d:0 "Russia agreed that we should be in the same alliance, which will secure the Eastern Europe both from the German imperialists and Syndicalist threat. Mitteleuropa couldn't make us hate our brothers from the Great Russia, that's why we decided to form this alliance - and we belive it will be also profitable for us."
+ukraine.72.d:0 "Russia agreed that we should be in the same alliance, which will secure the Eastern Europe both from the German imperialists and Syndicalist threat. Mitteleuropa couldn't make us hate our brothers from the Great Russia, that's why we decided to form this alliance - and we believe it will be also profitable for us."
 ukraine.72.a:0 "That's what Khmelnitsky wanted 300 years ago!"
 ukraine.73.t:0 "Ukraine has left us"
 ukraine.73.d:0 "Ukraine has left Mitteleuropa and entered an alliance with the Russians. We however can't risk a war over Ukraine regardless of what some officials are calling for."
@@ -375,7 +375,7 @@ UKR_Coll_Prog_desc:0 "After the latest agricultural crisis among the 'Kulaks', w
 UKR_Fate_Monarchy:0 "The Fate of the Monarchy"
 UKR_Fate_Monarchy_desc:0 "King Vasily I gave Nikita Khrushchev extensive powers in a bid to control the revolutionary forces sweeping the country. Now that Khrushchev's initial program has been implemented, many interest groups within Ukraine are asking for Royal Power to intervene to create a more sustainable order."
 UKR_Syn_Rev:0 "Red Hetman"
-UKR_Syn_Rev_desc:0 "As the great Hetman Bogdan Khmelnitsky, who once liberated people on the both riversides of the Dnieper from the Polish yoke, Nikita Khrushchev and the Popular Front threw out the King and all these landowners, who controled Ukraine more than 20 years. Finally the people of Ukraine are ready to build new society, proud and free!"
+UKR_Syn_Rev_desc:0 "As the great Hetman Bogdan Khmelnitsky, who once liberated people on the both riversides of the Dnieper from the Polish yoke, Nikita Khrushchev and the Popular Front threw out the King and all these landowners, who controlled Ukraine more than 20 years. Finally the people of Ukraine are ready to build new society, proud and free!"
 UKR_Remove_Khrushchev:0 "Red Resistance"
 UKR_Remove_Khrushchev_desc:0 "Nikita Khrushchev has gained too much power in the country and the King has decided to remove him from office before it's too late. But the peasants and workers haven't forgotten their leader, who had promised a great future for Ukraine. The attacks on the police by the syndicalist rebels happen almost every week. We must do something to prevent a great crisis!"
 
