--- a/localisation/KR_Transamur_l_english.yml
+++ b/localisation/KR_Transamur_l_english.yml
@@ -442,7 +442,7 @@ TRM_national_populist:0 "Transamur"
 
 ### Ideas ###
 TRM_dream: "Greater Transamur Ambitions"
-TRM_dream_desc: "Ever since 1925 the Transamur goverment claim themselves as rightful government of all Russia, deposed by filthy traitors of Kerensky's cabinet. Although, the country isn't in it's best shape, one day Transamur might become a new superpower."
+TRM_dream_desc: "Ever since 1925 the Transamur government claim themselves as rightful government of all Russia, deposed by filthy traitors of Kerensky's cabinet. Although, the country isn't in it's best shape, one day Transamur might become a new superpower."
 TRM_kolchak:0 "Admiral-Dictator"
 TRM_kolchak_desc:0 "As former admiral of Russian Empire Kolckak pays attention to the naval researches more strict than other leaders do. His knowledge about the ships give him an advance in naval technologies."
 TRM_jap_advisors:0 "Japanese Military Advisers"
@@ -489,13 +489,13 @@ TRM_Navy_Ships:0 "Grand Fleet"
 TRM_Navy_Ships_desc:0 "Since Russian defeat in Russo-Japanese war the Russian Pacific fleet was a living example of misery. As legitimate government of Russia it's our duty to restore former glory of our Pacific fleet."
 
 TRM_Navy_Docks:0 "Pearl in the East"
-TRM_Navy_Docks_desc:0 "Vladivostok is our great pearl. We must do everything to make our city the best city of the entire Asia. Our efforys will results in bigger naval facilities and stronger naval fortifications."
+TRM_Navy_Docks_desc:0 "Vladivostok is our great pearl. We must do everything to make our city the best city of the entire Asia. Our efforts will results in bigger naval facilities and stronger naval fortifications."
 
 TRM_Navy_Old_Ways:0 "Legacy of Weltkrieg"
 TRM_Navy_Old_Ways_desc:0 "A lot of time passed since the end of the Weltkrieg. Naval thoughts have changed and new brand technologies such as carriers and submarines appeared. But these new toys are nothing comparing with some old good ships. The big and strong navy will destroy everything."
 
 TRM_Navy_Cruiser_desc:0 "Cruiser Effort"
-TRM_Navy_Cruiser_desc:0 "We are not ready to construct big battleships, so it's wise to focus on smaller ships such as cruisers. They are one of the keys to dominate the seas and we mst have some."
+TRM_Navy_Cruiser_desc:0 "We are not ready to construct big battleships, so it's wise to focus on smaller ships such as cruisers. They are one of the keys to dominate the seas and we must have some."
 
 TRM_Navy_DD:0 "Destroyer Effort"
 TRM_Navy_DD_desc:0 "Destroyers are small fast ships whcih are produced to escort trade convoys and bigger ships. Although they aren't a pinnacle of warships we can't just ignore them."
@@ -510,13 +510,13 @@ TRM_Navy_Carrier:0 "Carrier Effort"
 TRM_Navy_Carrier_desc:0 "Carrier Effort"
 
 TRM_Ind_Vlad:0 "Initial Industrialisation"
-TRM_Ind_Vlad_desc:0 "Kolchak's autocratic government did almost nothing to develop our country all the 20's. Now, we have a very very backwater industry and something must be done. We should start to develop our country step by step. Even these steps are small they will result in prosperious country some day."
+TRM_Ind_Vlad_desc:0 "Kolchak's autocratic government did almost nothing to develop our country all the 20's. Now, we have a very very backwater industry and something must be done. We should start to develop our country step by step. Even these steps are small they will result in prosperous country some day."
 
 TRM_Ind_Jap_Inv1:0 "Minor Japanese Investment"
 TRM_Ind_Jap_Inv1_desc:0 "It harsh measure but we can't develop faster without foreign investments. Japan the only one country which can invest some money in us. However, this will upset our people."
 
 TRM_Ind_Jap_Inv2:0 "Major Japanese Investment"
-TRM_Ind_Jap_Inv2_desc:0 "We need more! Japan are willing to invest even more money and machines. But with thies new investiments we are going right into economical dependance from Japan. We must find a balance."
+TRM_Ind_Jap_Inv2_desc:0 "We need more! Japan are willing to invest even more money and machines. But with these new investments we are going right into economical dependence from Japan. We must find a balance."
 
 TRM_Ind_Dock:0 "Expand Vladivostok Dockyards"
 TRM_Ind_Dock_desc:0 "Vladivostok is our only way to construct ships. We need even more dockyards if we want a proper fleet."
@@ -537,7 +537,7 @@ TRM_Ind_Bai:0 "Expand Industry in Lake Baikal Region"
 TRM_Ind_Bai_desc:0 "We now have a very developed industrial region of Irkutsk in our hand. It already has a strong industrial potential, but can improve it even more if we open some new facilities."
 
 TRM_Ind_Mon:0 "Expand Industry in Former Mongol Lands"
-TRM_Ind_Mon_desc:0 "These lands are in very poor conditions. A decades of Mongolian rulership have pillaged them. It will take us a long time to build up this region."
+TRM_Ind_Mon_desc:0 "These lands are in very poor conditions. A decades of Mongolian leadership have pillaged them. It will take us a long time to build up this region."
 
 TRM_Ind_Transsib_exp:0 "Improve Supply Network"
 TRM_Ind_Transsib_exp_desc:0 "As more of Transsib railroad become part of our country the more usable it. We now can even create a statewide railroad supply system to deliver goods all across the country."
@@ -570,10 +570,10 @@ TRM_Arm_Mot:0 "Motorisation Effort"
 TRM_Arm_Mot_desc:0 "As our army become larger and larger every day, we need some transport for troops. New trucks might be useful."
 
 TRM_Arm_Arm:0 "Expand Dalzavod Facilities"
-TRM_Arm_Arm_desc:0 "We can use our Dalzavod factory to produce a limited series of our own tanks. Tanks are very important in modern day battles due their durabilityю"
+TRM_Arm_Arm_desc:0 "We can use our Dalzavod factory to produce a limited series of our own tanks. Tanks are very important in modern day battles due their durability"
 
 TRM_Air_Planes:0 "Found a Vladivostok Airfleet"
-TRM_Air_Planes_desc:0 "Untill this moment we don't have any sign of airfleet. Aircrafts have become a very deadly weapon of war. We must have them. But without air bases even the biggest airfleet will be useless."
+TRM_Air_Planes_desc:0 "Until this moment we don't have any sign of airfleet. Aircrafts have become a very deadly weapon of war. We must have them. But without air bases even the biggest airfleet will be useless."
 
 TRM_Air_Fighter:0 "Fighter Effort"
 TRM_Air_Fighter_desc:0 "Fighters are main type of aircraft we should use. We can't dominate the skies without them."
@@ -588,7 +588,7 @@ TRM_Air_Doc:0 "Modernise HQ"
 TRM_Air_Doc_desc:0 "Even with moder aircraft we have we still need a proper military stuff to command them. We should intensively train some new officers"
 
 TRM_Air_Para:0 "Vladivostok Airbornes"
-TRM_Air_Para_desc:0 "Airbornes is new brand type of infantry. Not so numerous as standart infantry, these guys can infiltrate into enemy lines."
+TRM_Air_Para_desc:0 "Airbornes is new brand type of infantry. Not so numerous as standard infantry, these guys can infiltrate into enemy lines."
 
 TRM_Air_Bases_Vlad:0 "Expand Vladivostok Airbases"
 TRM_Air_Bases_Vlad_desc:0 "We need even more bases for our airfleet. Vladivostok seems a good place to build new bases."
@@ -660,19 +660,19 @@ TRM_FE_SIB:0 "Siberia is Vulnerable"
 TRM_FE_SIB_desc:0 "One way or another but Siberia is now independent. Their government almost has no power within the state, so we can pressure them to retake lands which rightfully belongs to us. Maybe we even can infiltrate in their government and take the leading positions in Siverian parliament."
 
 TRM_FE_RUS:0 "Russia is Vulnerable"
-TRM_FE_RUS_desc:0 "Russia is now in state of civil war with bolsheviks again. While they are busy in the West we can pressure them in the East. With Japanese protection we can demand our rightful soil back."
+TRM_FE_RUS_desc:0 "Russia is now in state of civil war with Bolsheviks again. While they are busy in the West we can pressure them in the East. With Japanese protection we can demand our rightful soil back."
 
 TRM_FE_SOV:0 "The Reds are Vulnerable"
-TRM_FE_SOV_desc:0 "The Reds have managed to win the civil war and now formally control the Russian Far East. But, in fact, they can barely control the Petrograd. We must immediately purge them from our rightfull lands."
+TRM_FE_SOV_desc:0 "The Reds have managed to win the civil war and now formally control the Russian Far East. But, in fact, they can barely control the Petrograd. We must immediately purge them from our rightful lands."
 
 TRM_Demand_Bai:0 "Push our Claims in Baikal Region"
-TRM_Demand_Bai_desc:0 "The Russian Far East is nothin but wasteland. If we want to expand even more, we need some industrial bases. The Baikal seems to be a good start for us."
+TRM_Demand_Bai_desc:0 "The Russian Far East is nothing but wasteland. If we want to expand even more, we need some industrial bases. The Baikal seems to be a good start for us."
 
 TRM_Cap_Irkutsk:0 "Move Capital to Irkutsk"
 TRM_Cap_Irkutsk_desc:0 "We now control Irkutsk what means a growing industry for us. Declaring the city our new capital will lower Japanese influence in our state, but they will not be happy about it. "
 
 TRM_Demand_Mon:0 "Crush the Mongols"
-TRM_Demand_Mon_desc:0 "Part of the Transsiberian railroad still remains in a hand of mad baron Sternberg. If retake the Transsib it will both show our growing might and boost our idustry even more. Shall we attack the Mongolia?"
+TRM_Demand_Mon_desc:0 "Part of the Transsiberian railroad still remains in a hand of mad baron Sternberg. If retake the Transsib it will both show our growing might and boost our industry even more. Shall we attack the Mongolia?"
 
 TRM_Integrate_Bai:0 "Integrate Baikal"
 TRM_Integrate_Bai_desc:0 "Conquer a piece of land is one thing. To make it's inhabitants accept you is another one. It will take us some time to bring order in the Baikal region but if we are success, we can even declare ourselves the Far Eastern Republic. It will show everyone that we are now not just a small Transamur and we will not stop until the clear victory."
@@ -693,10 +693,10 @@ TRM_Claim_Russia:0 "Final Solution"
 TRM_Claim_Russia_desc:0 "The time has come! Day by day we dream about the time when we will strike our enemies from Petrograd. We no longer Transamur, we no longer Far Eastern Republic, no. We now claim the title of Russian Republic! We will liberate Mother Russia from all the traitors of her."
 
 TRM_Leave_Japan:0 "Leave Japanese Sphere of Influence"
-TRM_Leave_Japan_desc:0 "As we complete our ambitions, we no longer in need of Japanese. Now we can officialy leave their sphere of influence and become completely free."
+TRM_Leave_Japan_desc:0 "As we complete our ambitions, we no longer in need of Japanese. Now we can officially leave their sphere of influence and become completely free."
 
 TRM_Become_Russia:0 "Become Russia"
-TRM_Become_Russia_desc:0 "The time of war has come to an end. Now it's time for new strong Russia to arise. No more traitors, no more bolsheviks, no more Japanese imperialists. We are Russia now!"
+TRM_Become_Russia_desc:0 "The time of war has come to an end. Now it's time for new strong Russia to arise. No more traitors, no more Bolsheviks, no more Japanese imperialists. We are Russia now!"
 
 ### Tooltips ###
 TRM_sov:0 "The Reds are too weak to control Russian Far East, this focus will give you the lands with 100% chance."
