--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -934,6 +934,10 @@ fengtian.new.120.t:0 "The Manchurian Youth League"
 fengtian.new.120.d:0 "The Manchurian Youth League has existed as a general association for Mantetsu employees and other Japanese residents in the Northeast for several years, but the recent attacks by bandits has lead it to issue a statement on the matter, calling on the Japanese Government to better protect its citizens, and demanding a greater degree of control over our government. \n\n Of course, the immediate impact will likely be minimal, but if the Youth League continues its efforts, it could turn some heads in Tokyo."
 fengtian.new.120.a:0 "Unfortunate"
 
+fengtian.new.121.t:0 "Creeping Mantetsu Influence"
+fengtian.new.121.d:0 "As it has done for years, Mantetsu continues its slow but sure efforts to dominate our economy, investing in businesses, buying others up, and diversifying across the industrial sector."
+fengtian.new.121.a"0 "This must be resisted"
+
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
 fengtian.informalempire.1.d:0 "The time has come to declare our independence, drive the Japanese intruders from China, and end a century of unbearable national humiliation! We will naturally be deprived of foreign material support, but the Chinese people now rally behind us. Onward! Zhonghua Mingguo Wansui!"
