--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -284,6 +284,9 @@ ukraine.48.t:0 "Romania refuses!
 ukraine.48.d:0 "Romanian King published a note, where he insists that Bessarabia is rightfully Romanian territory, and Ukraine will never get this region. The only solution of this problem for us is the war with Romanian Monarchists"
 ukraine.48.a:0 "Then it is war"
 ukraine.48.b:0 "We don't need Bessarabia"
+ukraine.49.t:0 "Social Chaos in the Ukraine!"
+ukraine.49.d:0 "Distressing news - conditions in the countryside have driven our peasants into radicalism! They are expropriating the estates of absentee proprietors for themselves, and there are even cases of resident landlords being lynched. Law and order has broken down, and the King is burned in effigy! Worse, our urban workers are rallying behind the cause, and there are daily demonstrations on the streets of Kiev calling for a Ukrainian Social Republic!"
+ukraine.49.a:0 "This is the final struggle!"
 ukraine.52.t:0 "An Heir to King Vasily?"
 ukraine.52.d:0 "Unfortunately, our King has no children and as such he has to choose his successor. Only two candidatures are considered by the government and ministers - the nephew of Vasily, Leo Stefan Habsburg and Daniil Skoropadsky, son of our Hetman. 'ViN' and 'OUN' support Daniil as they believe he will weaken Ukrainian dependence on Mitteleuropa. Leo has support only from Skoropadsky`s opponents and employers, who have connections with Germany and Austria. Whom will we choose?"
 ukraine.52.a:0 "Leo Stefan Habsburg!"
@@ -299,6 +302,7 @@ ukraine.54.a:0 "Long live Leo Stefan! And his supporters from 'ViN'..."
 ukraine.54.b:0 "Long live Leo Stefan! And his supporters from 'OUN'..."
 ukraine.54.c:0 "Long live Leo Stefan! And our Hetman Skoropadsky..."
 ukraine.54.e:0 "Long live Leo Stefan! And the landowners..."
+ukraine.55.t:0 "Explosion on the Dnieper"
 ukraine.55.d:0 "Today at 11 a.m. when our King Vasily was on his yacht, an explosion rips apart his small ship. Our minister of security got a message that the yacht of His Majesty was mined by a syndicalist group, which had decided to keep up their struggle against our government after their loss at the elections. Unfortunately, there was no chance to save our King, and different political groups want to use this chance and begin to govern Ukraine."
 ukraine.55.a:0 "Long live Daniil! And his supporters from 'ViN'..."
 ukraine.55.b:0 "Long live Daniil! And his supporters from 'OUN'..."
