--- a/localisation/KR_Political_l_english.yml
+++ b/localisation/KR_Political_l_english.yml
@@ -36,7 +36,7 @@ medium_economy:0 "WIP" #Medium Economy WIP!!!
 bad_economy:0 "WIP" #Bad Economy WIP!!!
 bust_economy:0 "WIP" #Bust Economy WIP!!!
 crash_economy:0 "WIP" #Crash Economy WIP!!!
-economic_health:0 "WIP, Don't worry about that" #Economic Health WIP!!!
+economic_health:0 "Work in progress, don't worry about this" #Economic Health WIP!!!
 
 ### Stability Events ###
 kr.political.1.t:0 "Downfall in Stability!"
@@ -145,7 +145,7 @@ kr.political.24.b:0 "Tell me more about this exciting new stability system..."
 kr.political.24.c:0 "But wait I have more questions... (Go to FAQ)"
 
 kr.political.25.t:0 "Meet the Team"
-kr.political.25.d:0 "Many thanks to the Kaiserreich HOI4 team:\n\n~mw~, Ace of Aces, Ahearne, AllyJammy, Anbory, Arda, Augenis, Axelius, BattleSarge, Chapien, Chef Exellence, CrazyZombie, CulturalMarxist, Dedlift, Delincious, Denizz, DDago, Dick Bong, DoctorPainkiller, Dskod1, Dylanstrategie, Esmaerla, Fatherlorris, Firefly, Flamefang, Gibzit, HappyNTH, Hayro, Herkles, Jak, Kakletron, Kallar, Kornilov, MattTheCzar, Miinda, Mikus, MonarchistKaiser, Mark, Musteline, Nijato, Packard, Phil, Pinback, PPsyrius, Rebi-chan, Selim, Strategia, Tatiana, TheBlackWinds, VincentDN, Wyandotte, Zankoas, Zarasophos and our beloved Kaiserbots!\n\nSpecial thanks go to our past developers in the HOI2 and DH versions, to Sarmatia1871 who created this marvellous universe, and of course to the fans, who have stuck with us for over 10 years. We could not have got here without you guys. Thank you for playing Kaiserreich!"
+kr.political.25.d:0 "Many thanks to the Kaiserreich HOI4 team:\n\n~mw~, Ace of Aces, Ahearne, AllyJammy, Anbory, Arda, Augenis, Axelius, BattleSarge, Chapien, Chef Exellence, CrazyZombie, CulturalMarxist, Dedlift, Delincious, Denizz, DDago, Dick Bong, DoctorPainkiller, Dskod1, Dylanstrategie, Esmaerla, Fatherlorris, Firefly, Flamefang, Gibzit, HappyNTH, Hayro, Herkles, Jak, Kakletron, Kallar, Kornilov, MattTheCzar, Miinda, Mikus, MonarchistKaiser, Mark, Musteline, Nijato, Packard, Phil, Pinback, PPsyrius, Rebi-chan, Selim, Strategia, Tatiana, TheBlackWinds, VincentDN, Wyandotte, Zankoas, Zarasophos and our beloved Kaiserbots!\n\nSpecial thanks go to our past developers in the HOI2 and DH versions, to Sarmatia1871 who created this marvellous universe, and of course to the fans, who have stuck with us for over 10 years. We could not have got here without you guys. Thank you for playing Kaiserreich!\n\nP.S. For full credits and a list of the mods incorporated into Kaiserreich, check out the new credits file in the mod!"
 kr.political.25.a:0 "Great job!"
 kr.political.25.b:0 "I don't even like this mod..."
 
