Nice fluffy unintentional jobs

--- a/localisation/KR_Mittelafrika_l_english.yml
+++ b/localisation/KR_Mittelafrika_l_english.yml
@@ -185,8 +185,9 @@ MAF_Annual_Financial_Statement:0 "Annual Financial Statement"
 MAF_Germany_Honours_Heroes:0 "Deutschland Ehrt Seine Helden"
 MAF_Secret_Police:0 "Establish the Deutsche Geheimpolizei"
 MAF_Supress_Natives:0 "Suppress Native Revolts"
-MAF_Forced_Labour:0 "Arbeit Macht Frei"
-MAF_Ban_European_Languages:0 "Ban Other European Languages"
+MAF_Forced_Labour:0 "Forced Labour"
+MAF_German_Oris:0 "German Education for the Oris"
+MAF_German_Oris_desc:0 "The Oris are the British, French and Belgian people that live in the territories conquered in the Weltkrieg,
 MAF_Goering:0 "Herrschaft Görings"
 MAF_Appoint_DAP_Governors:0 "Appoint DAP Governors"
 MAF_Bring_The_DAP_Into_Government:0 "Bring The DAP Into Government"
