--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -479,17 +479,17 @@ UKR_New_Army_UKR:0 "Army is reorganised"
 UKR_New_Army_UKR_desc:0 "Finally the army of Ukraine was reorganised by the Ministry of defence and our General Staff. It seems that the army, which had been formed after 1918 to maintain the independence of Ukraine finally got its new appearance."
 
 UKR_Newforpol:0 "New foreign policy"
-UKR_Newforpol_desc:0 "-"
+UKR_Newforpol_desc:0 "The initial steps of the Ukrainian recovery in the internal policy were made, now is the time to pay attention to the foreign policy. Though we didn't have any serious opportunities to strengthen our position in the Eastern Europe but maybe the situation is different now."
 UKR_Ties_Germany:0 "Strengthen the ties with Germany!"
-UKR_Ties_Germany_desc:0 "-"
+UKR_Ties_Germany_desc:0 "Germany remains our main ally and supporter in Europe. There are lots of spheres where the German experience can be a significant support for us, especially in our industry which we must revive after the Black Mondays. That's why we have to ask Germany for help!"
 UKR_Gerukr_army:0 "German arms"
-UKR_Gerukr_army_desc:0 "-"
+UKR_Gerukr_army_desc:0 "The Germans created the strongest army in Europe. We shouldn't miss our chance to take lessons from Berlin and increase the defense capability of our country."
 UKR_Ostwall_focus:0 "Ostwall"
-UKR_Ostwall_focus_desc:0 "-"
+UKR_Ostwall_focus_desc:0 "Our role in the Mitteleuropa is to secure the Eastern flank of the alliance. But it's clear that we can't do it alone. Fortunately Germany is ready to help us with building some fortifications all over the Russian border."
 UKR_is_alone:0 "Splendid isolation"
 UKR_is_alone_desc:0 "Ukraine is alone...but we still have lots of our citizens, who ready to work hard and defend Ukraine from the various enemies, who want to enslave our lands! Let's hope that this noble impulse won't perish among the people of our country in the future. The spirit of freedom should lead us!"
 UKR_Mozyr_claim:0 "White Ruthenian border"
-UKR_Mozyr_claim_desc:0 "-"
+UKR_Mozyr_claim_desc:0 "The citizens of the Polesia region live apart in their villages and don't care about the current situation in the world. But we should care about them and annex these lands if we have a good reason in the future."
 UKR_Bessarabia_claim:0 "Blue Danube"
 UKR_Bessarabia_claim_desc:0 "The Russian Empire lost Bessarabia in 1918. Nowadays lots of the Ukrainians and other national minorities live here under oppression of the corrupted regime in Bucharest. But now is the perfect time, when the freedom and self-determination should prevail in Bessarabia - and of course we will help people in this region reach the liberation."
 UKR_Fra_cooperation:0 "Cooperation with France"
@@ -499,6 +499,6 @@ UKR_Fra_alliance_desc:0 "With Ukraine finally free from German capitalist oppres
 UKR_Fra_claims:0 "Red Liberation"
 UKR_Fra_claims_desc:0 "Lots of the Ukrainian lands are still under control of the various regimes, which don't always respect all the rights of the Ukrainians their countries. If we want to strengthen the friendship of the nations as well as to secure the right of the self-determination of the Ukrainians, we should claim borderlands and hope that one day we will take them back."
 UKR_RUS_friendship:0 "Northern Wind"
-UKR_RUS_friendship_desc:0 "-"
+UKR_RUS_friendship_desc:0 "We didn't forget our brothers in the north. Though the traitors in 1918 had tried to tear apart the ties with Russia, but the people of Ukraine did their best to restore them. We remember how Russia helped us to gain the freedom from the Poles and Tatars - and now we will try together to become free from Germany."
 UKR_RUS_Galicia:0 "Galician question"
-UKR_RUS_Galicia_desc:0 "-"
+UKR_RUS_Galicia_desc:0 "Galicia is the last part of the Kievan Rus, which was under control of the Poles and Germans more than 600 years. But now we are strong enough to liberate the Ukrainians here from this terrible oppression."
