Another Ukrainian commit

--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -353,7 +353,7 @@ ukraine.73.b:0 "We shall destroy them!"
 ukraine.73.c:0 "Curse them!"
 ukraine.73.e:0 "We shall destroy them!"
 ukraine.74.t:0 "Ukraine has left us"
-ukraine.74.d:0 "Ukraine has left Mitteleuropa and entered an alliance with the Russians. We however can't risk a war over Ukraine regardless of what some officials are calling for."
+ukraine.74.d:0 "Ukraine has left Mitteleuropa and decided to maintain their independence from us. We however can't risk a war over Ukraine regardless of what some officials are calling for."
 ukraine.74.a:0 "Curse them!"
 ukraine.74.b:0 "We shall destroy them!"
 ukraine.74.c:0 "Curse them!"
