Fengtian war events

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -720,7 +720,7 @@ fengtian.new.70.a:0 "Fill the reserve"
 fengtian.new.70.b:0 "No risk no reward"
 
 fengtian.new.71.t:0 "Economic Disaster!"
-fengtian.new.71.d:0 "After the Bank of Japan and Mitsui Bank, major lenders to our own government, unexpectedly called for outstanding debts to be paid, our Central Bank suddenly found itself unable to provide sufficient silver for the transaction. News of the situation quickly leaked to the public provoking a run on the banks,and widespread financial panic. Rumour suggests that the crisis is not a product of gross mismanagement and incompetence on behalf of the government, which would surprise few in Fengtian, but rather a deliberate move to deceive the public. Mantetsu's offices in Mukden and Harbin have already begun a full scale investigation, and unless action is taken they seem likely to discover a very incriminating paper trail. \n\n While there are several options available, it would be unfortunate if certain government files inexplicably went missing..."
+fengtian.new.71.d:0 "After the Bank of Japan and Mitsui Bank, major lenders to our own government, unexpectedly called for outstanding debts to be paid, our Central Bank suddenly found itself unable to provide sufficient silver for the transaction. News of the situation quickly leaked to the public provoking a run on the banks, and widespread financial panic. Rumour suggests that the crisis is not a product of gross mismanagement and incompetence on behalf of the government, which would surprise few in Fengtian, but rather a deliberate move to deceive the public. Mantetsu's offices in Mukden and Harbin have already begun a full scale investigation, and unless action is taken they seem likely to discover a very incriminating paper trail. \n\n While there are several options available, it would be unfortunate if certain government files inexplicably went missing..."
 fengtian.new.71.a:0 "Burn the evidence!"
 fengtian.new.71.b:0 "Burn it and blame the Japanese!"
 fengtian.new.71.c:0 "Ask Japan for a bailout!"
@@ -936,7 +936,7 @@ fengtian.new.120.a:0 "Unfortunate"
 
 fengtian.new.121.t:0 "Creeping Mantetsu Influence"
 fengtian.new.121.d:0 "As it has done for years, Mantetsu continues its slow but sure efforts to dominate our economy, investing in businesses, buying others up, and diversifying across the industrial sector."
-fengtian.new.121.a"0 "This must be resisted"
+fengtian.new.121.a:0 "This must be resisted"
 
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
@@ -964,3 +964,86 @@ fengtian.informalempire.6.a:0 "Unfortunate"
 fengtian.informalempire.7.t:0 "Major Anti-Japanese Protests"
 fengtian.informalempire.7.d:0 "Angered by the overwhelming control over our country by Japan and Mantetsu, protests have broken out across the country. Police and military units are already on site, but they seem unwilling to go far to limit the protests. While they ought to die down in a few days, it seems unlikely that this will be the last of the protestors unless major changes occur."
 fengtian.informalempire.7.a:0 "Unfortunate"
+
+###FNG War Events###
+
+fngwar.1.t:0 "Calls to Strike Qing"
+fngwar.1.d:0 "There have been calls from the Assembly to strike what remains of Qing, and put the regressive manchu monarchists in the grave once and for all, but ultimately only the the Grand Marshal can determine whether such a step is in the Government's best interest. If the plans for war are approved, the military has exactly 48 days to position itself accordingly, and from there deliver the decisive blow."
+fngwar.1.a:0 "To Reunification!"
+fngwar.1.b:0 "Let's not"
+
+fngwar.2.t:0 "War with Qing"
+fngwar.2.d:0 "War is soon to begin. May fortune guide our brave soldiers!"
+fngwar.2.a:0 "Victory is assured!"
+
+fngwar.3.t:0 "Calls to strike Shangqing"
+fngwar.3.d:0 "There have been calls from the Assembly to strike Shangqing, and put these superstitious fanatics in their place, but ultimately only the the Grand Marshal can determine whether such a step is in the Government's best interest."
+fngwar.3.a:0 "To Reunification!"
+fngwar.3.b:0 "Let's not"
+
+fngwar.4.t:0 "War with Shangqing"
+fngwar.4.d:0 "War is soon to begin. May fortune guide our brave soldiers!"
+fngwar.4.a:0 "Victory is assured!"
+
+fngwar.5.t:0 "Calls to strike Yunnan"
+fngwar.5.d:0 "There have been calls from the Assembly to strike the Yunnan Clique, and end their corrupt and divisive ways, but ultimately only the the Grand Marshal can determine whether such a step is in the Government's best interest. If the plans for war are approved, the military has exactly 48 days to position itself accordingly, and from there deliver the decisive blow."
+fngwar.5.a:0 "To Reunification!"
+fngwar.5.b:0 "Let's not"
+
+fngwar.6.t:0 "War with Yunnan"
+fngwar.6.d:0 "War is soon to begin. May fortune guide our brave soldiers!"
+fngwar.6.a:0 "Victory is assured!"
+
+fngwar.7.t:0 "Calls to strike the AOG"
+fngwar.7.d:0 "There have been calls from the Assembly to strike the AOG, and cast these exploitative western imperialists out of China once and for all, but ultimately only the the Grand Marshal can determine whether such a step is in the Government's best interest. If the plans for war are approved, the military has exactly 48 days to position itself accordingly, and from there deliver the decisive blow."
+fngwar.7.a:0 "To Reunification!"
+fngwar.7.b:0 "Let's not"
+
+fngwar.8.t:0 "War with the AOG"
+fngwar.8.d:0 "War is soon to begin. May fortune guide our brave soldiers!"
+fngwar.8.a:0 "Victory is assured!"
+
+fngwar.9.t:0 "Calls to Strike Tibet"
+fngwar.9.d:0 "There have been calls from the Assembly to strike Tibet, and incorporate these backward mountain dwellers, but ultimately only the the Grand Marshal can determine whether such a step is in the Government's best interest. If the plans for war are approved, the military has exactly 48 days to position itself accordingly, and from there deliver the decisive blow."
+fngwar.9.a:0 "To Reunification!"
+fngwar.9.b:0 "Let's not"
+
+fngwar.10.t:0 "War with Tibet"
+fngwar.10.d:0 "War is soon to begin. May fortune guide our brave soldiers!"
+fngwar.10.a:0 "Victory is assured!"
+
+fngwar.11.t:0 "Calls to Strike the Ma Clique"
+fngwar.11.d:0 "There have been calls from the Assembly to strike the Ma Clique in the West, but ultimately only the the Grand Marshal can determine whether such a step is in the Government's best interest. If the plans for war are approved, the military has exactly 48 days to position itself accordingly, and from there deliver the decisive blow."
+fngwar.11.a:0 "To Reunification!"
+fngwar.11.b:0 "Let's not"
+
+fngwar.12.t:0 "War with the Ma Clique"
+fngwar.12.d:0 "War is soon to begin. May fortune guide our brave soldiers!"
+fngwar.12.a:0 "Victory is assured!"
+
+fngwar.13.t:0 "Calls to strike the Legation Cities"
+fngwar.13.d:0 "There have been calls from the Assembly to strike the Legation Cities, and reclaim these indivisible parts of the Chinese nation, but ultimately only the the Grand Marshal can determine whether such a step is in the Government's best interest. If the plans for war are approved, the military has exactly 48 days to position itself accordingly, and from there deliver the decisive blow."
+fngwar.13.a:0 "To Reunification!"
+fngwar.13.b:0 "Let's not"
+
+fngwar.14.t:0 "War with the Legation Cities"
+fngwar.14.d:0 "War is soon to begin. May fortune guide our brave soldiers!"
+fngwar.14.a:0 "Victory is assured!"
+
+fngwar.15.t:0 "Calls to strike the Republic of China"
+fngwar.15.d:0 "There have been calls from the Assembly to strike the Republic of China, and silence this challenge to our legitimacy, but ultimately only the the Grand Marshal can determine whether such a step is in the Government's best interest. If the plans for war are approved, the military has exactly 48 days to position itself accordingly, and from there deliver the decisive blow."
+fngwar.15.a:0 "To Reunification!"
+fngwar.15.b:0 "Let's not"
+
+fngwar.16.t:0 "War with the Republic of China"
+fngwar.16.d:0 "War is soon to begin. May fortune guide our brave soldiers!"
+fngwar.16.a:0 "Victory is assured!"
+
+fngwar.17.t:0 "Calls to strike the National Protection Alliance"
+fngwar.17.d:0 "There have been calls from the Assembly to strike the National Protection Alliance, but ultimately only the the Grand Marshal can determine whether such a step is in the Government's best interest. If the plans for war are approved, the military has exactly 48 days to position itself accordingly, and from there deliver the decisive blow."
+fngwar.17.a:0 "To Reunification!"
+fngwar.17.b:0 "Let's not"
+
+fngwar.18.t:0 "War with the National Protection Alliance"
+fngwar.18.d:0 "War is soon to begin. May fortune guide our brave soldiers!"
+fngwar.18.a:0 "Victory is assured!"
